--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@ Detener
 <h4>Michell Jessamyn Toribio Confesor</h4>
 <img src="res/android/mdpi.png" width="56" height="46">
 </div>
-</div
-></body>
+</div>
+</body>
 </html>
